Added hover text to icons.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,22 @@
         
         <!-- footer -->
         <div class="divFooter">     
-            <div onclick="location.href='https://www.facebook.com/'"><img src="css/img/icons/icnFacebook.svg" alt="Facebook" class="ftrIcon"></div>
-            <div onclick="location.href='https://www.linkedin.com/'"><img src="css/img/icons/icnLinkedIn.svg" alt="LinkedIn" class="ftrIcon"></div>
-            <div onclick="location.href='https://github.com/'"><img src="css/img/icons/icnGitHub.svg" alt="GitHub" class="ftrIcon"></div>
-            <div onclick="showContent('ABOUT')"><img src="css/img/icons/icnContact.svg" alt="Contact Details" class="ftrIcon"></div>
+            <div class="divIcon" onclick="location.href='https://www.facebook.com/'">
+                <img src="css/img/icons/icnFacebook.svg" alt="Facebook" class="ftrIcon">
+                <span class="ftrIconText">Facebook</span>
+            </div>
+            <div class="divIcon" onclick="location.href='https://www.linkedin.com/'">
+                <img src="css/img/icons/icnLinkedIn.svg" alt="LinkedIn" class="ftrIcon">
+                <span class="ftrIconText">LinkedIn</span>
+            </div>
+            <div class="divIcon" onclick="location.href='https://github.com/'">
+                <img src="css/img/icons/icnGitHub.svg" alt="GitHub" class="ftrIcon">
+                <span class="ftrIconText">GitHub</span>
+            </div>
+            <div class="divIcon" onclick="showContent('ABOUT')">
+                <img src="css/img/icons/icnContact.svg" alt="Contact Details" class="ftrIcon">
+                <span class="ftrIconText">Contact details</span>
+            </div>
         </div>
     </div>
 
