--- a/index.html
+++ b/index.html
@@ -40,35 +40,37 @@
     <!-- Main content -->
     <div class="divMainBody">
         <!-- About & Education & Skills & Contact-->
-        <div class="divContentBody">
+        <div class="divContentBody container">
             About Skills Contact
         </div>
 
         <!-- Experience & Portfolio-->
-        <div class="divContentBody">
+        <div class="divContentBody container">
             Experience Portfolio
         </div>
     </div>
 
     <!-- footer -->
-    <div class="divFooter">
-        <div onclick="location.href='https://www.facebook.com/'">
-            <img src="css/img/icons/icnFacebook.svg" alt="Facebook" class="ftrIcon">
-            <span class="ftrIconText">Facebook</span>
+    <footer>
+        <div class="divFooter">
+            <div onclick="location.href='https://www.facebook.com/'">
+                <img src="css/img/icons/icnFacebook.svg" alt="Facebook" class="ftrIcon">
+                <span class="ftrIconText">Facebook</span>
+            </div>
+            <div onclick="location.href='https://www.linkedin.com/'">
+                <img src="css/img/icons/icnLinkedIn.svg" alt="LinkedIn" class="ftrIcon">
+                <span class="ftrIconText">LinkedIn</span>
+            </div>
+            <div onclick="location.href='https://github.com/'">
+                <img src="css/img/icons/icnGitHub.svg" alt="GitHub" class="ftrIcon">
+                <span class="ftrIconText">GitHub</span>
+            </div>
+            <div onclick="showContent('CONTACT')">
+                <img src="css/img/icons/icnContact.svg" alt="Contact Details" class="ftrIcon">
+                <span class="ftrIconText">Contact</span>
+            </div>
         </div>
-        <div onclick="location.href='https://www.linkedin.com/'">
-            <img src="css/img/icons/icnLinkedIn.svg" alt="LinkedIn" class="ftrIcon">
-            <span class="ftrIconText">LinkedIn</span>
-        </div>
-        <div onclick="location.href='https://github.com/'">
-            <img src="css/img/icons/icnGitHub.svg" alt="GitHub" class="ftrIcon">
-            <span class="ftrIconText">GitHub</span>
-        </div>
-        <div onclick="showContent('CONTACT')">
-            <img src="css/img/icons/icnContact.svg" alt="Contact Details" class="ftrIcon">
-            <span class="ftrIconText">Contact</span>
-        </div>
-    </div>
+    </footer>
 
     <!-- javascript -->
     <script>
