--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- footer -->
     <footer>
-        <div class="divFooter">
+        <div class="divIconRow">
             <div onclick="location.href='https://www.facebook.com/'">
                 <img src="css/img/icons/icnFacebook.svg" alt="Facebook" class="ftrIcon">
                 <span class="ftrIconText">Facebook</span>
@@ -66,8 +66,9 @@
                 <img src="css/img/icons/icnContact.svg" alt="Contact Details" class="ftrIcon">
                 <span class="ftrIconText">Contact</span>
             </div>
-        </div>
+        </div>   
     </footer>
+    <div id="divCopyRight">Copyright © 2019 John Chen</div>
 
     <!-- javascript -->
     <script type="text/javascript" src="js/index.js"></script>
