--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     <div id="divMainBody">
         <!-- About & Education & Skills & Contact-->
         <div class="divContentBody container">
-            About Skills Contact
+            About <br>
+            <br><br><br><br><br><br><br>
+            <div id="divSkillChart">
+               
+            </div>
+            Contact
+            <br>
+            <br><br><br><br><br><br><br>
         </div>
 
         <!-- Experience & Portfolio-->
@@ -71,10 +78,12 @@
     <div id="divCopyRight">Copyright © 2019 John Chen</div>
 
     <!-- javascript -->
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    <script src="js/index.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/highcharts.js"></script>
+    <script src="js/chart.js"></script>
+    <script>
         $(document).ready(function () {
             init();
 
