add moment.js, add details in timeline chart.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <script src="js/highcharts-3d.js"></script>
     <script src="js/solid-gauge.js"></script>
     <script src="js/timeline.js"></script>
+    <script src="js/moment.min.js"></script>
     
     <script>
         $(document).ready(function () {
