--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div id="divNavRow">
                 <div id="divName" class="divNavCol">John Chen</div>
                 <div class="divNavCol divHover" onclick="showContent('ABOUT')">About</div>
+                <div class="divNavCol divHover" onclick="showContent('EDUCATION')">Education</div>
                 <div class="divNavCol divHover" onclick="showContent('SKILLS')">Skills</div>
                 <div class="divNavCol divHover" onclick="showContent('EXPERIENCE')">Experiences</div>
                 <div class="divNavCol divHover" onclick="showContent('PORTFOLIO')">Portfolios</div>
-                <div class="divNavCol divHover" onclick="showContent('CONTACT')">Contact</div>
             </div>
     
             <div id="divMenu" class="openbtn" onclick="openSidebar()">☰</div>
@@ -27,11 +27,11 @@
                 <a href="javascript:void(0)" onclick="closeSidebar()">×</a>
                 <div onclick="showContent('ABOUT')">About</div>
                 <div onclick="showContent('CAREER')">Career</div>
-                <div onclick="showContent('EXPERIENCE')">Experiences</div>
-                <div onclick="showContent('PORTFOLIO')">Portfolios</div>
                 <div onclick="showContent('ABILITIES')">Abilities</div>
                 <div onclick="showContent('SKILLS')">Skills</div>
                 <div onclick="showContent('TOOLS')">Tools</div>
+                <div onclick="showContent('EXPERIENCE')">Experiences</div>
+                <div onclick="showContent('PORTFOLIO')">Portfolios</div>
                 <div onclick="showContent('CONTACT')">Contact</div>
             </div>
         </header>
@@ -41,11 +41,26 @@
             <div class="divContentBody container">
                 <!-- First row -->
                 <div class="divContentRow">
-                    <!-- About ME -->
+                    <!-- About me -->
                     <div id="divAboutMe" class="divContentCell">
                         <div class="divInnerCell">
-                            <span><h5>About me</h5></span>
-
+                            <span><h5>About me</h5></span>                            
+                            <div id="divIntro">
+                                <div id="divPhotoContainer"></div>
+                                <span><strong>Greeting everyone,</strong></span>
+                                <p>
+                                    I am John from Taiwan. I am a sofware developer currently seeking for suitable position 
+                                    that can upskill myself and also devote what I have learnt to the company. 
+                                    I have just completed one year industry experience of web development and 
+                                    ready to embrance the next opportunity waving at me. 
+                                </p>
+                                <p>
+                                    I am a proactive and self-motivated individual. I am enthusiastically keen and willing to learn a variety of skills and technologies. 
+                                    I have proven to be a fast learner by achieving academic success throughout my studies. 
+                                    I am also a team-oriented person, I believe collaboration plays a pivotal role when business project comes to fruition. 
+                                    It would be a real privilege to work with talented individuals and make contributions to bring the company to flourish. 
+                                </p>
+                            </div>
                         </div>
                     </div>
 
@@ -158,6 +173,7 @@
     
     <script>
         $(document).ready(function () {
+            'use strict';
             init();
 
             //Resize navigation bar when window width is changing
