--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- First row -->
                 <div class="divContentRow">
                     <!-- About me -->
-                    <div id="divAboutMe" class="divContentCell">
+                    <div id="divAboutMe" class="divContentCell firstRowCell">
                         <div class="divInnerCell">
                             <span><h5>About me</h5></span>                            
                             <div id="divIntro">
@@ -64,7 +64,7 @@
                     </div>
 
                     <!-- Personal info -->
-                    <div id="divContactInfo" class="divContentCell">
+                    <div id="divContactInfo" class="divContentCell firstRowCell">
                         <div class="divInnerCell">
                             <span><h5>Personal Information</h5></span>
                             <table id="tblInfo">
