--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             </li>
                             <li>
                                 <span>Skills developed: </span>
-                                Teamwork, Problem solving, Time arrangement, Multiple programming languages
+                                Teamwork, Problem solving, Time management, Programming languages
                             </li>
                         </ul> 
                         <div class="clearFloat" style="padding-bottom: 1.5em;"></div>
