Minor layout changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <div id="divPhotoContainer"></div>
                             <span><strong>Greetings everyone,</strong></span>
                             <p>
-                                I am John, Taiwan, who has just completed one year work experience in web development. 
+                                I am John, Taiwan, who has just completed one year industry experience in web development. 
                                 I am a sofware developer currently seeking for a suitable position 
                                 that can upskill myself and also devote what I have learnt to the company. 
                             </p>
