get number of mine count adjacent selected tile.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                                         <button id="btnLevel" class="btn btn-seondary dropdown-toggle btnBorderDark" type="button" data-toggle="dropdown">EASY
                                         <span class="caret"></span></button>
                                         <div class="dropdown-menu" aria-labelledby="btnLevel">
-                                            <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.changeLevel(1)">EASY</button>
-                                            <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.changeLevel(2)">MEDIUM</button>
-                                            <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.changeLevel(3)">DIFFICULT</button>
+                                            <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.setLevel(1)">EASY</button>
+                                            <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.setLevel(2)">MEDIUM</button>
+                                            <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.setLevel(3)">DIFFICULT</button>
                                         </div>
                                     </div>
                                     <button id="btnMSRestart" type="button" class="btn btn-secondary" onclick="libMinesweeper.startGame();">Restart</button>                         
