--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                             <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.setLevel(3)">DIFFICULT</button>
                                         </div>
                                     </div>
-                                    <button id="btnMSRestart" type="button" class="btn btn-secondary" onclick="libMinesweeper.startGame();">Restart</button>                         
+                                    <button id="btnMSRestart" type="button" class="btn btn-secondary" onclick="libMinesweeper.setLevel(); libMinesweeper.startGame();">Restart</button>                         
                                 </div>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal" style="float: right;">Close</button>
                             </div>
