--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
                         <!-- Modal header -->
                         <div class="modal-header">
                             <span class="modal-title" id="modalCenterTitle"><strong>Photos</strong></span>
+                            <div class="divGameControls" style="margin: 0px auto;">
+                                <div class="divFlagSet">
+                                    <div class="divFlag"></div>
+                                    <span id="spFlagCount"></span>
+                                </div>      
+                            </div>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -67,7 +73,7 @@
                                 <img src="css/img/busTraking_result.png" alt="busTraking_result" class="imgSmallProfolios busTracking" onclick="selectImage(3);">
                             </div>
                             <div id="divBtnRow">
-                                <div id="divBtnGame"  style="float: left;">
+                                <div class="divGameControls"  style="float: left;">
                                     <div class="dropdown"  style="float: left; padding-right: 10px;">
                                         <button id="btnLevel" class="btn btn-seondary dropdown-toggle btnBorderDark" type="button" data-toggle="dropdown">EASY
                                         <span class="caret"></span></button>
@@ -77,7 +83,7 @@
                                             <button class="dropdown-item activeItem" type="button" onclick="libMinesweeper.setLevel(3)">DIFFICULT</button>
                                         </div>
                                     </div>
-                                    <button id="btnMSRestart" type="button" class="btn btn-secondary" onclick="libMinesweeper.setLevel(); libMinesweeper.startGame();">Restart</button>                         
+                                    <button id="btnMSRestart" type="button" class="btn btn-secondary" onclick="libMinesweeper.startGame();">Restart</button>                         
                                 </div>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal" style="float: right;">Close</button>
                             </div>
