add minesweeper to my profolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div onclick="showContent('TOOLS');">TOOL</div>
                 <div onclick="showContent('EXPERIENCE');">EXPERIENCE</div>
                 <div onclick="showContent('PORTFOLIO');">PORTFOLIO</div>
-                <div onclick="openPopup('GAMES');" data-toggle="modal" data-target="#popupBackground">GAME</div>
+                <div onclick="openPopup('MINESWEEPER GAME');" data-toggle="modal" data-target="#popupBackground">GAME</div>
                 <div onclick="showContent('CONTACT');">CONTACT</div>
             </div>
             
@@ -105,7 +105,7 @@
                             <div id="divPhotoContainer"></div>
                             <span><strong>Greetings everyone,</strong></span>
                             <p>
-                                I am John, Taiwan, who has just completed one year industry experience in web development. 
+                                I am John, from Taiwan, who has just completed one year industry experience in web development. 
                                 I am a sofware developer currently seeking for a suitable position 
                                 that can upskill myself and also devote what I have learnt to the company. 
                             </p>
